fixed mobile FAQ overflow

--- a/src/styles/faq.module.css
+++ b/src/styles/faq.module.css
@@ -1430,7 +1430,7 @@ position: relative;
     display: flex;
     justify-content: space-between; 
     @media (max-width: 500px) {
-        width: 50ch;
+        width: 40ch;
         font-size: 0.8rem;
     }
 }
